--- a/app/src/main/res/layout/vaipo_view.xml
+++ b/app/src/main/res/layout/vaipo_view.xml
@@ -15,6 +15,15 @@
             android:layout_height="fill_parent"
             android:id="@+id/subscriber_container"></FrameLayout>
 
+        <ProgressBar
+            android:id="@+id/loadingSpinner"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:indeterminate="false"
+            android:visibility="gone" />
+
         <FrameLayout
             android:layout_width="@dimen/publisher_width"
             android:layout_height="@dimen/publisher_height"
