--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         android:layout_alignBottom="@+id/editText"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/editText2"
-        android:editable="false"
+        android:editable="true"
         android:numeric="integer"
         android:textStyle="italic"
         android:textColor="#fa9a4f" />
