--- a/app/src/main/res/layout/vaipo_view.xml
+++ b/app/src/main/res/layout/vaipo_view.xml
@@ -4,7 +4,8 @@
                 android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ChatActivity">
+                android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ChatActivity"
+                android:id ="@+id/rootView">
 
     <FrameLayout
         android:layout_width="fill_parent"
