--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,4 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_debug"
+        android:icon="@drawable/abc_btn_radio_to_on_mtrl_015"
+        android:checkable="true"
+        android:enabled="true"
+        android:visible="false"
+
+        android:showAsAction="always"
+        android:title="debug"/>
 </menu>
