--- a/app/src/main/res/layout/vaipo_view.xml
+++ b/app/src/main/res/layout/vaipo_view.xml
@@ -66,13 +66,24 @@
             android:visibility="invisible"
             android:padding="3dp">
 
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/subscriber_container"
+            <RelativeLayout
+                android:id="@+id/flipper"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:gravity="center"
                 >
-            </FrameLayout>
-
+                <ProgressBar
+                    android:id="@+id/progressbar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                </ProgressBar>
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/subscriber_container"
+                    >
+                </FrameLayout>
+            </RelativeLayout>
 
             <FrameLayout
                 android:layout_width="wrap_content"
