--- a/app/src/main/res/layout/userconfirmation_view.xml
+++ b/app/src/main/res/layout/userconfirmation_view.xml
@@ -1,34 +1,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".BubbleVideoService"
-                android:layout_gravity="center_vertical"
+                tools:context=".BubbleVideoService"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/viewImg"
                 android:visibility="visible">
         <ImageView
             android:id ="@+id/imgView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/video48"
+            android:src="@drawable/video32"
             android:layout_margin="16dp"
-
-            android:layout_gravity="bottom|center_horizontal"
             />
         <TextView
             android:id ="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:layout_toRightOf="@id/imgView"
-            android:text="Enable Video ?"
+            android:text="Enable Video for ongoing call ?"
             android:textStyle="italic"
             android:textColor="#C73F17"
-            android:textSize="32sp"
-            android:layout_margin="16dp"
+            android:textSize="18sp"
 
             />
 
@@ -37,19 +29,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:layout_margin="16dp"
             android:clickable="true"
-            android:layout_below="@id/textView"
-            android:src="@drawable/ic_yes" />
+            android:src="@drawable/ic_yes"
+            android:layout_below="@+id/textView"
+            android:layout_alignStart="@+id/textView"/>
 
         <ImageButton
             android:id ="@+id/imgNo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:layout_margin="16dp"
             android:clickable="true"
-            android:layout_toRightOf="@id/imgYes"
-            android:layout_below="@id/textView"
-            android:src="@drawable/ic_no" />
+            android:src="@drawable/ic_no"
+            android:layout_below="@+id/textView"
+            android:layout_alignEnd="@+id/textView"
+            android:layout_marginEnd="66dp"/>
     </RelativeLayout>
