--- a/app/src/main/res/layout/fragment_flags.xml
+++ b/app/src/main/res/layout/fragment_flags.xml
@@ -8,6 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:gravity="center_vertical"
+    android:tag="verfiy"
     tools:context=".FlagsActivity$PlaceholderFragment">
 
     <EditText
