--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -31,7 +31,7 @@
         <ListPreference
             android:key="list_preference"
             android:title="@string/title_list_preference"
-            android:summary=""
+            android:summary="This option is used while showing the video call"
             android:dialogTitle="@string/dialog_title_list_preference"
             android:entries="@array/entries_list_preference"
             android:entryValues="@array/entryvalues_list_preference" />
